tests/files/lexer_tests/should_fail/098.cmdr
//Should not parse due to missing semicolon
if (true) echo hi else echo bye